--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3310
-NEON_DB_URL='postgresql://neondb_owner:npg_NTKZJgY6jQ9U@ep-wild-resonance-ahipwciw-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+NEON_DB_URL='postgresql://neondb_owner:npg_Nu0JhMBEX7WT@ep-restless-wind-a1q2nw0s-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
